Fix spacing when closed

--- a/public/css/light.scss
+++ b/public/css/light.scss
@@ -977,6 +977,7 @@ tr.table-warning:hover > td {
 	}
 }
 
+$league-top-bar-toggle-width: 15px;
 .league-top-bar {
 	&::-webkit-scrollbar {
 		height: 3px;
@@ -989,11 +990,13 @@ tr.table-warning:hover > td {
 		background: rgba(71, 71, 71, 0.637);
 		border-radius: 50px;
 	}
+
+	padding-right: $league-top-bar-toggle-width;
 }
 .league-top-bar-toggle {
 	border-top-right-radius: 0 !important;
 	border-bottom-right-radius: 0 !important;
-	width: 15px;
+	width: $league-top-bar-toggle-width;
 	height: 56px;
 	z-index: 1000;
 	position: absolute;
